samples/_failures_safe/1761657050_daddac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbf75502.c: In function ‘main’:
./samples/SAFE/__tmp_fbf75502.c:157:5: error: expected declaration or statement at end of input
  157 |     if (scanf("%d", &max_items) != 1) {
      |     ^~
./samples/SAFE/__tmp_fbf75502.c:157:5: error: expected declaration or statement at end of input
